# fprod

./: .gitignore  ChatGPT.hs  Main.hs  README.md  api.hs  config.json  promptEditor.cabal  test.db
ElmMain/: package-lock.json  package.json  webpack.config.js
ElmMain/src/: Api.elm  Base.elm  Main.elm  View.elm  index.html
PromptEditor/: Application.hs  ChatGPT.hs  DB.hs  Environment.hs  Types.hs  Web.hs
