name:                   promptEditor
version:                0.0.1
build-type:             Simple
cabal-version:          >=1.10

executable promptEditor
    main-is:            Main.hs
    other-modules:      PromptEditor.Types, PromptEditor.Web, PromptEditor.DB
    build-depends:      base >= 4.7
                        ,sqlite-simple
                        ,aeson
                        ,wai-extra
                        ,wai-middleware-static
                        ,bytestring
                        ,transformers
                        ,mtl
                        ,scotty
                        ,text
    default-language:   Haskell2010