name:                   promptEditor
version:                0.0.1
build-type:             Simple
cabal-version:          >=1.10

executable promptEditor
    main-is:            Main.hs
    other-modules:      PromptEditor.Types, PromptEditor.Environment, PromptEditor.Web, PromptEditor.DB, PromptEditor.Application, ChatGPT
    build-depends:      base >= 4.7
                        ,sqlite-simple
                        ,aeson
                        ,wai-extra
                        ,wai-middleware-static
                        ,bytestring
                        ,transformers
                        ,mtl
                        ,scotty
                        ,http-conduit
                        ,text
    default-language:   Haskell2010